manifests/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: podlister
spec:
  ports:
  - name: http
    port: 8080
    targetPort: http
